# ai-inspection-app

./: README.md  pyproject.toml
src/ai_inspection_app/: main.py
src/ai_inspection_app/datasets/: load_dataset.py
src/ai_inspection_app/models/: detector.py
