[tool.poetry]
name = "ai-inspection-app"
version = "0.1.0"
description = ""
authors = ["hopperjc <mhjc@cin.ufpe.br>"]
readme = "README.md"
packages = [{include = "ai_inspection_app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
