[tool.poetry]
name = "ai-inspection-app"
version = "0.1.0"
description = ""
authors = ["hopperjc <mhjc@cin.ufpe.br>"]
readme = "README.md"
packages = [{include = "ai_inspection_app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.6.0"
torchvision = "^0.21.0"
ultralytics = "^8.3.110"
albumentations = "^2.0.5"
matplotlib = "^3.10.1"
tqdm = "^4.67.1"
scikit-learn = "^1.6.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
